--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 "toast":"Sejam todos Bem Vindos Ao aplicativo.",
 
-"cor":"#FF00FF77",
+"cor":"#FF48FFF5",
 
 "textvipdialogo1":"Deseja comprar o FFH4X VIP? Sua conta volta em poucos segundos utilizando apenas o ID, caso não saiba seu ID você pode desbanir manualmente utilizando a segunda opção.",
 
@@ -66,7 +66,7 @@
 
 "ToastError":"Ocorreu um error desconhecido",
 
-"textdesbanpt":"Desbanir Contas Permanente",
+"textdesbanpt":"Desbanir Contas Permanente (Use o Por ID)",
 
 "textoexemplopt":"Essa opção irá desbanir sua conta que esteja banida, sua conta pode voltar em 2 dias. o Maximo de dias para voltar é 12 dias\nQuer sua conta ainda hoje?\nRecupere aqui: https://youtu.be/KF2B5hoqXvw",
 
