--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
 "criador":"Criado Por Jato v1.98.X",
 
-"codigodesban":"U2VUcmFkdXppdcOJR2F5=",
+"codigodesban":"LQnNld1RleHRQb3N0YXRPV4",
 
 "titlevip":"Desbanir em 1 minuto",
 
@@ -306,7 +306,7 @@
 
 "imgbangladesh":"https://i.postimg.cc/65PHcR8Y/bangladesh.png",
 
-"linkmeuvideo":"https://www.apkprofissa.online/p/confira-as-vantagens-do-financiamento.html",
+"linkmeuvideo":"https://www.apkprofissa.online/p/4-opcoes-de-cartao-de-credito-para.html",
 
 "linkwhats2":"https://api.whatsapp.com/send/?phone=5521998535476&text=Ol%C3%A1%2C+tenho+interesse+em+comprar+o+ffh4x+antban%2C+quanto+custa%3F&app_absent=0",
 
