--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 "cor":"#FF48FFF5",
 
+"HabilitarDesbanFree":"on",
+
 "textvipdialogo1":"Deseja comprar o FFH4X VIP? Sua conta volta em poucos segundos utilizando apenas o ID, caso não saiba seu ID você pode desbanir manualmente utilizando a segunda opção.",
 
 "jatourlvenda":"https://t.me/JATODOSHACKERS",
