--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 "HabilitarDesbanFree":"on",
 
+"DesbanFreeDialogText":"Aguarde o vídeo começar para usar essa função, você pode desbanir ainda hoje usando a segunda opção de Desbanir na Hora Pelo ID!",
+
 "textvipdialogo1":"Deseja comprar o FFH4X VIP? Sua conta volta em poucos segundos utilizando apenas o ID, caso não saiba seu ID você pode desbanir manualmente utilizando a segunda opção.",
 
 "jatourlvenda":"https://t.me/JATODOSHACKERS",
