--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 "cor":"#FF48FFF5",
 
-"HabilitarDesbanFree":"onn",
+"HabilitarDesbanFree":"on",
 
 "DesbanFreeDialogText":"Aguarde o vídeo começar para usar essa função, você pode desbanir ainda hoje usando a segunda opção de Desbanir na Hora Pelo ID!",
 
