--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 "DesbanFreeDialogText":"Aguarde o vídeo começar para usar essa função, você pode desbanir ainda hoje usando a segunda opção de Desbanir na Hora Pelo ID!",
 
+"DesbanFreeDialogTextEN":"Wait for the video to start to use this function, you can unban it today using the second option of Unban Instantly Using ID!",
+
 "textvipdialogo1":"Deseja comprar o FFH4X VIP? Sua conta volta em poucos segundos utilizando apenas o ID, caso não saiba seu ID você pode desbanir manualmente utilizando a segunda opção.",
 
 "jatourlvenda":"https://t.me/JATODOSHACKERS",
