--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 "HabilitarDesbanFree":"onn",
 
-"DesbanFreeDialogText":"Aguarde o vídeo começar para usar essa função, você pode desbanir ainda hoje usando a segunda opção de Desbanir na Hora Pelo ID!",
+"DesbanFreeDialogText":"Aguarde o vídeo começar para usar essa função, você pode desbanir ainda hoje usando a segunda opção de Desbanir na Hora Pelo ID!\n\nPode demora algumas horas para funcionar após a estreia iniciar!",
 
 "DesbanFreeDialogTextEN":"Wait for the video to start to use this function, you can unban it today using the second option of Unban Instantly Using ID!",
 
