--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 "cor":"#FF48FFF5",
 
-"HabilitarDesbanFree":"onn",
+"HabilitarDesbanFree":"on",
 
 "DesbanFreeDialogText":"Aguarde o vídeo começar para usar essa função, você pode desbanir ainda hoje usando a segunda opção de Desbanir na Hora Pelo ID!\n\nPode demora algumas horas para funcionar após a estreia iniciar!",
 
@@ -38,7 +38,7 @@
 
 "dgtitlepro":"Aviso",
 
-"dgmessagepro":"Recupere sua conta ainda hoje neste PAINEL! ainda está funcionando 100%: 27/12/2023.",
+"dgmessagepro":"Recupere sua conta ainda hoje neste PAINEL! ainda está funcionando 100%: 29/12/2023.",
 
 "toastkey":"Em breve sairá tutorial!",
 
@@ -84,7 +84,7 @@
 
 "textocliquesen":"Complete the bar below to use the unban on the fly",
 
-"textoforcaspt":"Clique em 6 anúncios para liberar o acesso, se você não clicar não irá funcionar!!\nExemplo: se você for concluir uma etapa você terá que clicar em 6 anúncios em cada etapa que for subindo, use o navegador *Chrome* para Indentificar que você está clicando!\n\nAinda esta funcionando! 27/12/2023\nTutorial: https://youtu.be/KF2B5hoqXvw",
+"textoforcaspt":"Clique em 6 anúncios para liberar o acesso, se você não clicar não irá funcionar!!\nExemplo: se você for concluir uma etapa você terá que clicar em 6 anúncios em cada etapa que for subindo, use o navegador *Chrome* para Indentificar que você está clicando!\n\nAinda esta funcionando! 29/12/2023\nTutorial: https://youtu.be/KF2B5hoqXvw",
 
 "textoforcasen":"Click on 6 ads to release access, if you don't click it won't work!!",
 
