--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
 "nomedocanal":"JATO TUTORIAIS",
 
-"linkwhats":"https://api.whatsapp.com/send/?phone=5521998535476&text=Ol%C3%A1%2C+tenho+interesse+em+comprar+o+ffh4x+antban%2C+quanto+custa%3F&app_absent=0",
+"linkwhats":"https://t.me/JATODOSHACKERS",
 
 "link2":"https://youtu.be/Zi1J5swiLhw",
 
