--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
 "nomedocanal":"JATO TUTORIAIS",
 
-"linkwhats":"https://t.me/JATODOSHACKERS",
+"linkwhats":"https://jatodosmods.com/",
 
 "link2":"https://youtu.be/Zi1J5swiLhw",
 
@@ -240,9 +240,9 @@
 
 "trialvip":"trial",
 
-"versionff":"Versão v1.102.X",
+"versionff":"Versão v1.103.X",
 
-"versionffmax":"Versão v2.102.X",
+"versionffmax":"Versão v2.103.X",
 
 "titulotrial":"Código vip do site",
 
@@ -314,7 +314,7 @@
 
 "linkmeuvideo":"https://www.apkprofissa.online/p/4-opcoes-de-cartao-de-credito-para.html",
 
-"linkwhats2":"https://api.whatsapp.com/send/?phone=5521998535476&text=Ol%C3%A1%2C+tenho+interesse+em+comprar+o+ffh4x+antban%2C+quanto+custa%3F&app_absent=0",
+"linkwhats2":"https://jatodosmods.com/",
 
 "link":"https://youtu.be/hIjgwpIbzkQ",
 
