--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 "textvipdialogo1":"Deseja comprar o FFH4X VIP? Sua conta volta em poucos segundos utilizando apenas o ID, caso não saiba seu ID você pode desbanir manualmente utilizando a segunda opção.",
 
-"jatourlvenda":"https://t.me/JATODOSHACKERS",
+"jatourlvenda":"https://jatodosmods.com/",
 
 "textgods":"GodsTeam 25.00",
 
