--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 "DesbanFreeDialogTextEN":"Wait for the video to start to use this function, you can unban it today using the second option of Unban Instantly Using ID!",
 
-"textvipdialogo1":"Deseja comprar o FFH4X VIP? Sua conta volta em poucos segundos utilizando apenas o ID, caso não saiba seu ID você pode desbanir manualmente utilizando a segunda opção.",
+"textvipdialogo1":"Para comprar o FFH4X VIP acesse nosso site, use o\nCUPOM: JATO10\nPara ganhar 10% de desconto na sua compra. a entrega é enviada pelo seu e-mail junto com seu código vip, se não quiser comprar pelo site você pode compra pelo whatsapp. ele está no final da página do produto.",
 
 "jatourlvenda":"https://jatodosmods.com/",
 
