--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 "statubar":"novo",
 
-"textodatas":"Recupere hoje pelo Desban Por ID!",
+"textodatas":"https://jatodosmods.com",
 
 "grupozap":"https://chat.whatsapp.com/C2cA39y6bHDHKamIGEuNax",
 
