--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 "statubar":"novo",
 
-"textodatas":"https://jatodosmods.com",
+"textodatas":"Versão atualizada",
 
 "grupozap":"https://chat.whatsapp.com/C2cA39y6bHDHKamIGEuNax",
 
