--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
 "criador":"Criado Por Jato v1.98.X",
 
-"codigodesban":"SmF0b0Rvc01vZHM=",
+"codigodesban":"PdJtHpdvYn4jktnHYS=",
 
 "titlevip":"Desbanir em 1 minuto",
 
