--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 "linkcanal5":"https://youtu.be/U7aDDL8tJwQ",
 
-"dgtitleobb":"Escolha um",
+"dgtitleobb":"Escolha um menu",
 
 "mgtitleobb":"Escolha um HS Para continuar usando",
 
