--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
 "criador":"Criado Por Jato v1.104.X",
 
-"codigodesban":"PdJtHpdvYn4jktnHYS=",
+"codigodesban":"JhxSdt3TpjADG3=",
 
 "titlevip":"Desbanir em 1 minuto",
 
