--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 "versaoffh4x":"1.0",
 
-"packageffh4x":"com.ffh4x.pro.vip27",
+"packageffh4x":"com.ffh4x.pro.vipv27",
 
 "dialogffh4x":"Não está disponivel para download.",
 
