--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 "tx6":"Clique aqui",
 
-"visiblepeste":"sim",
+"visiblepeste":"sims",
 
 "txtFfh4xProDesc":"Para comprar o código visite o site:\nhttps://jatodosmods.com/mods/codigo-vip\n\nPainel funcionando em todos os Android/Emuladores!\n100% Antiban\n100% AntiBlackList\nBoa para pegar desafiante no rank!\nBot de travamentos adicionado ao ffh4x, trave qualquer jogador utilizando apenas o ID!",
 
