--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
 
 "tx6":"Clique aqui",
 
+"tx7":"Por favor insira um código.",
+
+"tx8":"Dispositivo diferente do cadastro.",
+
+"tx9":"Ligue sua internet",
+
+"tx10":"Esse código não existe, insira um válido!",
+
+"tx11":"jato",
+
 "visiblepeste":"sims",
 
 "txtFfh4xProDesc":"Para comprar o código visite o site:\nhttps://jatodosmods.com/mods/codigo-vip\n\nPainel funcionando em todos os Android/Emuladores!\n100% Antiban\n100% AntiBlackList\nBoa para pegar desafiante no rank!\nBot de travamentos adicionado ao ffh4x, trave qualquer jogador utilizando apenas o ID!",
