--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
 "criador":"Criado Por Jato v1.104.X",
 
-"codigodesban":"JhxSdt3TpjADG3=",
+"codigodesban":"GhP6xfUodvaz=",
 
 "titlevip":"Desbanir em 1 minuto",
 
