--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
 "criador":"Criado Por Jato v1.105.X",
 
-"codigodesban":"GhP6xfUodvaz=",
+"codigodesban":"LhtXiPgzRmcg=",
 
 "titlevip":"Desbanir em 1 minuto",
 
