--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 "txtupdatespotify":"15 de junho de 2024",
 
-"visiblespotify":"sim",
+"visiblespotify":"simm",
 
 "DesbanFreeDialogText":"Aguarde o vídeo começar para usar essa função, você pode desbanir ainda hoje usando a segunda opção de Desbanir na Hora Pelo ID!\n\nPode demora algumas horas para funcionar após a estreia iniciar!",
 
