--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
 "criador":"Criado Por Jato v1.108.X",
 
-"codigodesban":"LhtXiPgzRmcg=",
+"codigodesban":"tHcbj6SvYu63f=",
 
 "titlevip":"Desbanir em 1 minuto",
 
