--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
 "criador":"Criado Por Jato v1.114.X",
 
-"codigodesban":"tHcbj6SvYu63f=",
+"codigodesban":"dJfgXieo3Ght=",
 
 "titlevip":"Desbanir em 1 minuto",
 
