--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
 "textocliquesen":"Complete the bar below to use the unban on the fly",
 
-"textoforcaspt":"Clique em 8 anúncios para liberar o acesso, se você não clicar não irá funcionar!!\nExemplo: se você for concluir uma etapa você terá que clicar em 8 anúncios em cada etapa que for subindo, use o navegador *Chrome* para Indentificar que você está clicando!\n\nAinda esta funcionando! 14/09/2025\nTutorial: https://youtu.be/KF2B5hoqXvw",
+"textoforcaspt":"Clique em 8 anúncios para liberar o acesso, se você não clicar não irá funcionar!!\nExemplo: se você for concluir uma etapa você terá que clicar em 8 anúncios em cada etapa que for subindo, use o navegador *Chrome* para Indentificar que você está clicando!\n\nAinda esta funcionando! 16/10/2025\nTutorial: https://youtu.be/KF2B5hoqXvw",
 
 "textoforcasen":"Click on 6 ads to release access, if you don't click it won't work!!",
 
@@ -342,7 +342,7 @@
 
 "vertutorialdesban":"Nenhum código vip disponível no momento.\n(Fique de olho nas notificações)",
 
-"linkdialogdesban":"https://www.apkprofissa.online/p/muitos-truques-para-aumentar-seu-score.html",
+"linkdialogdesban":"https://www.apkprofissa.online/p/como-fazer-o-dinheiro-render-o-mes.html?m=1",
 
 "chavedesban":"mostrartutorial",
 
@@ -400,7 +400,7 @@
 
 "imgbangladesh":"https://i.postimg.cc/65PHcR8Y/bangladesh.png",
 
-"linkmeuvideo":"https://www.apkprofissa.online/p/muitos-truques-para-aumentar-seu-score.html",
+"linkmeuvideo":"https://www.apkprofissa.online/p/como-fazer-o-dinheiro-render-o-mes.html?m=1",
 
 "linkwhats2":"https://jatodosmods.com/",
 
